projekt-compiler/test/misc/unsorted/success/s_multi_use_mult_revbraces.rail
$'main'(--):
 \
  \
   \
    \
     \
      \
       \       #
        \      |
         \     |
          ----]m[---(!m!)--\
               |           |
               \---5--4----/

result: 20