projekt-compiler/test/misc/unsorted/fail/s_simplest_func (6).rail
$'main'(--):
 \
  \
   \
    \
     \
      \
       \       #
        \      |
         \     |
          ----[a]---(!b!)--\
               |           |
               \-----2-3---/

result: 5